Version 1.3
-------------------------------------------------------------------------

New Features -
  1. geocode now accepts a vector of arguments and returns a data.frame of lat/lons. (thanks to tony tran for suggestion.)

Fixes -
  1. qmap and ggmapplot now deals properly with maprange.R CMD 




Version 1.2
-------------------------------------------------------------------------

Additions -
  1. ggmapplot now accepts arguments base_layer, maprange, and expand.  base_layer is a ggplot(aes(.), .)  call which allows the user to specify the base layer of the plot which, when left unspecified, defaults to the four corners of the map.  maprange allows the user to set the x and y axis limits to the boundary of the map, and expand eliminates the white border space placed around the map.  this also allows for faceting the map plots, see ggmapplot examples.
  2. qmap's arguments properly handled.
  3. OSM_scale_lookup used for better scale choices with OpenStreetMaps.
  4. gglocator added following ggplot2 forum discussion by Tyler Rinker.






Version 1.1
-------------------------------------------------------------------------
Changes -
  ggimage and ggmapplot are now properly based on annotation_raster.  the custom geom_raster (and related dependence) has been removed.  dependence on proto removed.

Additions -
  1. theme_inset which allows for easy inset theming (exported)
  2. ggmap now takes latitude longitude ranges for OpenStreetMaps 

Fixes -
  1. qmap now properly sets the fullpage(=TRUE) argument when unspecified.
  2. ggmap now properly provides a black and white image when specified.




Version 1.0
-------------------------------------------------------------------------
ggimage and ggmapplot are now based on geom_raster (new in ggplot2 as of version 0.9.0).




Version 0.8
-------------------------------------------------------------------------
Changes - 
1. Further updated examples for a more efficient R CMD check.